card, home margin, stretching bug fix
- card fixes
- home page bottom margin change
- avatar vertical stretching in safari bug fix

--- a/style.css
+++ b/style.css
@@ -124,6 +124,7 @@ a {
 /* C O N T E N T  C O N T A I N E R S */
 
 .hero {
+    align-items: flex-start;
     display: flex;
     flex-wrap: wrap;
     margin: 0 auto;
